# SnakeFoP

./: 3.2  3.2+3.3  4.1.cpp  CMakeLists.txt  README.md  control.cpp  first.cpp
src/code/: extension.cpp  funda.cpp  play.cpp
src/config/: default.config  nsdd
src/include/: data.h  extension.h  funda.h  play.h
src/maps/: default.map  twst.map
src/record/: 1.rec  r.rec
src/src/: last.txt
src/src/code/: .play.cpp.swp  extension.cpp  funda.cpp  play.cpp
src/src/config/: 10.config  t2.config
src/src/include/: data.h  extension.h  funda.h
src/src/maps/: m1.map  m2.map
src/src/record/: r1.rec  r2.rec  test.rec
